--- a/src/index.html
+++ b/src/index.html
@@ -55,83 +55,85 @@
                                 <p class="tech_spec__title">Дорожный патруль</p>
                                 <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
                             </div>
-                            <div class="tech_spec__mission">
-                                <p class="tech_spec__text">Задача:</p>
-                                <p class="tech_spec__text-descr">Регулировать движение на сложных участках, помогать водителям при поломке или аварии.</p>
-                            </div>
-                            <div class="tech_spec__outfit">
-                                <p class="tech_spec__text">Экипировка:</p>
-                                <ul class="tech_spec__outfit-list">
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_1.svg" alt="Огнетушитель">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_2.svg" alt="Аптечка">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Аптечка</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_3.svg" alt="Инструменты">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Инструменты</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_4.svg" alt="Трос">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Трос</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_5.svg" alt="Пусковое устройство">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Пусковое устройство</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_6.svg" alt="Пусковое устройство">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Пусковое устройство</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_7.svg" alt="Бланки европротокола">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Бланки европротокола</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Телескопическая лестница</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_9.svg" alt="Домкрат">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Домкрат</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Дорожные конусы</span>
-                                    </li>
-                                    <li class="tech_spec__outfit-item">
-                                        <div class="tech_spec__outfit-img">
-                                            <img src="./img/layout/outfit/outfit_11.svg" alt="Гайковерт">
-                                        </div>
-                                        <span class="tech_spec__outfit-text">Гайковерт</span>
-                                    </li>
-                                </ul>
+                            <div class="tech_spec__visible hidden">
+                                <div class="tech_spec__mission">
+                                    <p class="tech_spec__text">Задача:</p>
+                                    <p class="tech_spec__text-descr">Регулировать движение на сложных участках, помогать водителям при поломке или аварии.</p>
+                                </div>
+                                <div class="tech_spec__outfit">
+                                    <p class="tech_spec__text">Экипировка:</p>
+                                    <ul class="tech_spec__outfit-list">
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_1.svg" alt="Огнетушитель">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_2.svg" alt="Аптечка">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Аптечка</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_3.svg" alt="Инструменты">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Инструменты</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_4.svg" alt="Трос">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Трос</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_5.svg" alt="Пусковое устройство">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Пусковое устройство</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_6.svg" alt="Пусковое устройство">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Пусковое устройство</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_7.svg" alt="Бланки европротокола">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Бланки европротокола</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Телескопическая лестница</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_9.svg" alt="Домкрат">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Домкрат</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Дорожные конусы</span>
+                                        </li>
+                                        <li class="tech_spec__outfit-item">
+                                            <div class="tech_spec__outfit-img">
+                                                <img src="./img/layout/outfit/outfit_11.svg" alt="Гайковерт">
+                                            </div>
+                                            <span class="tech_spec__outfit-text">Гайковерт</span>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <a class="tech_spec__btn">
-                                <span>Скрыть</span>
+                                <span>Подробнее</span>
                                 <img src="./img/layout/icon-arrow.svg" alt="icon-arrow">
                             </a>
                         </div>
@@ -153,15 +155,62 @@
                 <div class="auto_park_wrapper">
                     <div class="auto_park__control">
                         <p class="auto_park__title">Транспорт ЦОДД</p>
-                        <img src="./img/layout/auto_park_arrow.svg" alt="auto_park_btn">
+                        <img class="rotate" src="./img/layout/auto_park_arrow.svg" alt="auto_park_btn">
                     </div>
                     <div class="auto_park_slider">
-
+                        <div class="auto_park_slider-overflow">
+                            <div class="auto_park_slider-wrapper">
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                                <div class="gallery_item">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="auto_park_slider-button">
+                            <button class="prev_button">
+                                <img src="./img/layout/slider/icon-arrow.png" alt="arrow_prev">
+                            </button>
+                            <button class="next_button">
+                                <img src="./img/layout/slider/icon-arrow.png" alt="arrow_next">
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-    <script type="module" src="./my_three.js"></script>
+    <script type="module" src="js/my_three.js"></script>
     </body>
 </html>
