first server commit

--- a/src/index.html
+++ b/src/index.html
@@ -160,41 +160,41 @@
                     <div class="auto_park_slider">
                         <div class="auto_park_slider-overflow">
                             <div class="auto_park_slider-wrapper">
-                                <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                <div class="gallery_item active">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_amarok.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_solara_1.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_solara_2.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_bus.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_amarok.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_solara_1.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_solara_2.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_bus.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_amarok.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_solara_1.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_solara_2.png" alt="slide">
                                 </div>
                                 <div class="gallery_item">
-                                    <img class="gallery_item-img" src="./img/layout/slider/slide_prew.png" alt="slide">
+                                    <img class="gallery_item-img" src="./img/layout/slider/slide_bus.png" alt="slide">
                                 </div>
                             </div>
                         </div>
