--- a/src/index.html
+++ b/src/index.html
@@ -211,6 +211,6 @@
             </div>
         </section>
 
-    <script type="module" src="js/my_three.js"></script>
+    <script type="module" src="js/three/my_three.js"></script>
     </body>
 </html>
