--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,47 @@
         <title>Гараж ЦОДД</title>
         <link rel="stylesheet" href="style/style.css">
     </head>
+    <style>
+        #hellopreloader>p {
+            display: none;
+        }
+        #hellopreloader_preload {
+            display: block;
+            position: fixed;
+            z-index: 99999;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            min-width: 320px;
+            background: #0E173E url(https://coddmac.store/Reka/oval.svg) center center no-repeat;
+            background-color: #000000;
+            background-size: 76px;
+        }
+
+        #welcome-text {
+            font-family: 'MoscowSans', sans-serif;
+            font-size: 24px;
+            color: #62a744;
+            font-weight: 600;
+            width: 100%;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            position: absolute;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            top: 72px;
+            height: 100%;
+        }
+        .tech_spec__interior.garage {
+            background-image: url("img/layout/slider/slide_amarok.png");
+        }
+    </style>
     <body>
     <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js"></script>-->
     <!--    <script src="https://cdn.jsdelivr.net/npm/three@0.135.0/examples/js/controls/OrbitControls.js"></script>-->
@@ -27,8 +68,14 @@
 <!--    </div>-->
 
 <!--    <div id="gui-container"></div>-->
+    <div id="hellopreloader">
+        <div id="hellopreloader_preload">
+            <p id="welcome-text">Готовимся к патрулированию</p>
+        </div>
+    </div>
 
-        <header class="header">
+
+    <header class="header">
             <div class="container">
                 <div class="header__wrapper">
                     <div class="header__logo">
