--- a/src/pages/aframe_interior.html
+++ b/src/pages/aframe_interior.html
@@ -13,9 +13,9 @@
         <a-assets>
             <img id="img" src="/src/img/amarok.jpg"/>
         </a-assets>
-        <a-sky id="img-360" color="#87CEEB" radius="10" rotation="0 180 0" src="#img"></a-sky>
+        <a-sky id="img-360" radius="10" rotation="0 180 0" src="#img"></a-sky>
     </a-scene>
 
-    <script src="/src/js/three/a-frame/a_frame_scene_360.js"></script>
+    <script src="/src/js/three/a-frame/aframe_interior.js"></script>
 </body>
 </html>
