add dinamic style js

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,14 @@
                         <div class="tech_spec__description">
                             <div class="tech_spec__info-wrapper">
                                 <div class="tech_spec__titles">
-                                    <p class="tech_spec__title">Дорожный патруль</p>
-                                    <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+                                    <div class="text_spec__texts">
+                                        <p class="tech_spec__title">Дорожный патруль</p>
+                                        <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+                                    </div>
+                                    <a class="tech_spec__btn-copied">
+                                        <span>Скрыть</span>
+                                        <img src="./img/layout/icon-arrow.svg" alt="icon-arrow">
+                                    </a>
                                 </div>
                                 <div class="tech_spec__visible hidden">
                                     <div class="tech_spec__mission">
