--- a/src/index.html
+++ b/src/index.html
@@ -231,6 +231,10 @@
             init() {
                 this.onDeviceOrientation = this.onDeviceOrientation.bind(this);
                 this.addEventListeners();
+                // const modalAframe = document.querySelector('.a-modal');
+                // const modalAframe2 = document.getElementById('ar-permission-overlay');
+                // console.log(modalAframe);
+                // console.log(modalAframe2);
             },
 
             addEventListeners() {
