config + optimize model

--- a/src/index.html
+++ b/src/index.html
@@ -136,14 +136,14 @@
                             </a>
                         </div>
                     </div>
-<!--                    <div class="tech_spec__interior">-->
-<!--                        <div class="tech_spec__interior-btn">-->
-<!--                            <span class="tech_spec__interior-text">В салон</span>-->
-<!--                            <div class="arrow-wrapper">-->
-<!--                                <img src="./img/layout/interior_arrow.svg" alt="interior_arrow">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                    <div class="tech_spec__interior">
+                        <div class="tech_spec__interior-btn">
+                            <span class="tech_spec__interior-text">В салон</span>
+                            <div class="arrow-wrapper">
+                                <img src="./img/layout/interior_arrow.svg" alt="interior_arrow">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <div class="tech_spec__interior">
