--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                     <div class="header__info">
                         <img class="header__info-img" src="./img/layout/header_img2.png" alt="model_preview">
                         <div class="header__info-descr">
-                            <p class="header__info-text">Volkswagen Amarok</p>
+                            <p class="header__info-text">Дорожный патруль</p>
                             <p class="header__info-text">30 автомобилей</p>
                         </div>
                     </div>
@@ -136,14 +136,6 @@
                             </a>
                         </div>
                     </div>
-<!--                    <div class="tech_spec__interior">-->
-<!--                        <div class="tech_spec__interior-btn">-->
-<!--                            <span class="tech_spec__interior-text">В салон</span>-->
-<!--                            <div class="arrow-wrapper">-->
-<!--                                <img src="./img/layout/interior_arrow.svg" alt="interior_arrow">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
                 </div>
             </section>
             <div class="tech_spec__interior">
@@ -223,6 +215,8 @@
         <a-sky id="img-360" radius="10" rotation="0 180 0" src="#img"></a-sky>
         <a-camera rotation-reader></a-camera>
     </a-scene>
+
+<!--    <iframe src="https://app.vectary.com/p/6wNw0ONZgebOfN5WkQrTcn" frameborder="0" width="100%" height="100%"></iframe>-->
 
     <script type="module" src="js/three/my_three.js"></script>
 <!--    <script type="module" src="js/three/functions/aframe.js"></script>-->
