--- a/src/pages/vectary.html
+++ b/src/pages/vectary.html
@@ -131,7 +131,8 @@
         </div>
     </main>
 
-    <iframe class="amarok_vectary" src="https://app.vectary.com/p/6wNw0ONZgebOfN5WkQrTcn" width="100%" height="100%"></iframe>
+<!--    <iframe class="amarok_vectary" src="https://app.vectary.com/p/6wNw0ONZgebOfN5WkQrTcn" width="100%" height="100%"></iframe>-->
+    <iframe class="amarok_vectary" src="https://app.vectary.com/p/1THUgChG2xOD1pfu4hYABp" width="100%" height="100%"></iframe>
 
     <section class="auto_park">
         <div class="container">
